[package]
name = "openxpress"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"